# reflow-oven

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  filter.cpp  filter.hpp  heatspeed.txt  init.cpp  max6675.cpp  max6675.h  pid-ide.txt  reflow-oven.ino  temperature.cpp  temperature.h
src/: CMakeLists.txt  filter.cpp  filter.hpp  init.cpp  init.h  reflow-oven.cpp  reflow-oven.ino  temperature.h
